<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">To Do</string>
    <!-- TODO: Supprimer ou modifier ce texte temporaire -->
    <string name="hello_blank_fragment" translatable="false">Bonjour fragment vierge</string>
    <string name="open_navigation_bar" translatable="false">Ouvrir la navigation</string>
    <string name="close_navigation_bar" translatable="false">Fermer la navigation</string>

    <!-- Écran de démarrage -->
    <string name="slogan">Le temps... c\'est de l\'argent</string>

    <!-- Connexion / Inscription -->
    <string name="login">Connexion</string>
    <string name="sign_in">Se connecter</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="Username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="have_account">Vous n\'avez pas de compte ?</string>
    <string name="already_account">Vous avez déjà un compte ?</string>
    <string name="Forget">Mot de passe oublié ?</string>
    <string name="email">Email</string>
    <string name="telephone">Téléphone</string>

    <!-- Menu du bas -->
    <string name="Home">Accueil</string>
    <string name="Category">Catégorie</string>
    <string name="Calendar">Calendrier</string>
    <string name="Graphs">Graphiques</string>

    <!-- Drawer Layout -->
    <string name="Settings">Paramètres</string>
    <string name="Share">Partager</string>
    <string name="About_Us">À propos</string>
    <string name="Logout">Déconnexion</string>

    <!-- Bottom Sheet Layout -->
    <string name="Create">Créer</string>
    <string name="Add_task">Ajouter une tâche</string>
    <string name="Add_Category">Ajouter une catégorie</string>
    <string name="Add_Challenge">Ajouter un défi</string>

    <!-- Dialog d'ajout de tâche -->
    <string name="New_Task">Nouvelle tâche</string>
    <string name="Add">Ajouter</string>
    <string name="Dismiss">Annuler</string>
    <string name="Nothing">Créer</string>
    <string name="SelectedCat">Catégorie sélectionnée</string>
    <string name="SelectedPrio">Priorité sélectionnée</string>
    <string name="Low">Basse</string>
    <string name="Medium">Moyenne</string>
    <string name="High">Haute</string>
    <string name="FillAll">Veuillez entrer toutes les informations !</string>
    <string name="AddedTask">Tâche ajoutée</string>
    <string name="CategoryAdded">Catégorie ajoutée</string>
    <string name="NothingAdded">Rien n\'a encore été ajouté</string>
    <string name="titleNeeded">Vous devez ajouter un titre</string>
    <string name="NoPrio">Aucune priorité sélectionnée</string>
    <string name="ShareBy">Partager par</string>
    <string name="MyApp">Mon application</string>

    <!-- Fragment Accueil -->
    <string name="Task">Tâches</string>
    <string name="Favorite">Favoris</string>
    <string name="Archive">Archives</string>
    <string name="Trend">Tendances</string>
    <string name="view_all">voir tout</string>
    <string name="Work">Travail</string>
    <string name="WorkDesc">Emploi du temps, agenda...</string>
    <string name="Personnel">Personnel</string>
    <string name="PersonnelDesc">Événements familiaux...</string>
    <string name="Hobby">Loisir</string>
    <string name="HobbyDesc">Lecture, Parachutisme...</string>

    <!-- Fragment Tâches -->
    <string name="Search">Rechercher...</string>
    <string name="TaskList">Liste des tâches</string>
    <string name="TaskEmpty">Il n\'y a aucune tâche</string>
    <string name="TaskDeleted">Tâche supprimée avec succès</string>
    <string name="TaskArchived">Tâche archivée avec succès</string>

    <!-- Favoris des tâches -->
    <string name="FavList">Liste des favoris</string>
    <string name="FavEmpty">Il n\'y a aucun favori</string>

    <!-- Archives des tâches -->
    <string name="TaskDesArchived">Tâche désarchivée avec succès</string>
    <string name="ArchList">Tâches archivées</string>
    <string name="ArchEmpty">Il n\'y a aucune tâche archivée</string>

    <!-- Fragment Bibliothèque -->

    <string name="PieDesc">Ce graphique montre les tâches terminées par mois.</string>
    <string name="BarDesc">Ce graphique montre la répartition des tâches par catégorie.</string>
    <string name="LineDesc">Ce graphique montre les priorités des tâches.</string>

    <!-- Chaîne ajoutée -->
    <string-array name="task_types">
        <item>Catégorie</item>
        <item>Tâche 1</item>
        <item>Tâche 2</item>
        <item>Tâche 3</item>
    </string-array>

    <array name="com_google_android_gms_fonts_certs">
        <item>@null</item>
    </array>

    <string name="select_priority">Priorité</string>
    <string name="no_priority_selected">Aucune période choisie</string>
    <string name="priority_low">Faible</string>
    <string name="priority_medium">Moyenne</string>
    <string name="priority_high">Élevée</string>
    <string name="date_format">%d/%d/%d</string>
    <string name="RB_Pay">Liste de contrôle illimitée</string>
    <string name="RB_Pay2">Personnalisation des tâches répétitives</string>
    <string name="RB_Pay3">Rappels de tâches améliorés</string>
    <string name="RB_Pay4">Widgets de tâches PRO</string>
    <string name="RB_Pay5">Profitez de tous les thèmes</string>
    <string name="RB_Pay6">Suppression des publicités</string>
    <string name="mens">Mensuel</string>
    <string name="par">Permanent</string>
    <string name="ann">Annuel</string>
    <string name="mens1">Mensuellement</string>
    <string name="par2">Facture une fois</string>
    <string name="ann3">Annuellement</string>
    <!-- Paramètres -->
    <string name="parametres">Paramètres</string>
    <string name="synchronisation">Synchronisation de compte</string>
    <string name="widget">Widget</string>
    <string name="notification">Notification</string>
    <string name="theme">Thème</string>
    <string name="tache_termine_sonnerie">Tâche terminée Sonnerie</string>
    <string name="version">Version:1.0.0.0</string>
    <string name="langues">Langues</string>

    <!-- Commentaires -->
    <string name="user_name">Zainab Wissal</string>
    <string name="first_comment">Cette application vaut vraiment le coup !</string>
    <string name="second_comment">C\'est une application tellement incroyable que vous pouvez la personnaliser</string>
    <!-- Modifier -->
    <string name="modification">Cliquez ici pour activer la modification</string>
    <string name="titre">Titre</string>
    <string name="description">Description</string>
    <string name="date_creation">Date de création :</string>
    <string name="priorite">Priorité</string>
    <string name="categorie">Catégorie</string>
    <string name="editTextDueDate">Date d\'échéance (AAAA-MM-JJ)</string>
    <string name="favorit">Favoris</string>
    <string name="Your_Data">Vos données</string>
    <string name="signUp">Inscription</string>
    <string name="Managing">Gestion des tâches</string>
    <string name="newCat"> Nouvelle Catégorie </string>
    <string name="Long_Click">Appuyez longuement pour afficher les détails</string>
    <string name="subtitleCat"> Sous-titre </string>
    <string name="terminee"> La tâche est marquée comme terminée </string>


</resources>