<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/Home"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/Settings"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/Share"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/About_Us"/>

    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/Logout"/>
        </menu>
    </item>
</menu>