<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login5"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="8dp"
                android:hint="@string/Username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login"
                android:text="@string/sign_in"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forget"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/blue"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/have_account"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/signupText"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/toSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/blue"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="4dp"
            android:backgroundTint="@color/blue"
            app:cornerRadius = "20dp"/>
    </LinearLayout>



</LinearLayout>