<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"

        android:background="@color/blue"
        >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/arc_2"
            android:layout_marginTop="-40dp"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:src="@drawable/sign_up_2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-399dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/signCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="-80dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="4dp"
            >


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="8dp"
                android:hint="@string/Username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/tele"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/telephone"
                android:drawablePadding="8dp"
                android:hint="@string/telephone"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/signButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/blue"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/already_account"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/signupText"
            android:textColor="@color/compet"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/sing_up"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/blue"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="4dp"
            android:backgroundTint="@color/blue"
            app:cornerRadius = "20dp"/>
    </LinearLayout>




</LinearLayout>