<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="0dp"
    android:background="@color/background_color"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:padding="0dp">

        <LinearLayout
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@color/blue"
            android:layout_margin="0dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/modification"
                android:textColor="@color/white"/>
            <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:layout_marginStart="110dp"
                android:src="@drawable/x"/>

        </LinearLayout>

        <!-- Titre -->
        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titre"
            android:padding="8dp"
            android:textColor="@color/gray2"
            style="@style/details"
            />

        <!-- Description -->
        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray2"
            android:hint="@string/description"
            android:padding="8dp"
            style="@style/details"/>

        <TextView
            android:id="@+id/textViewpriotity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/details"
            android:padding="8dp"
            android:text="@string/priorite"
            android:textColor="@color/gray2" />

        <!-- Priorité -->
        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:textColor="@color/gray2"
            android:enabled="false" />

        <!-- Date de création -->

            <TextView
                android:id="@+id/textViewCreationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/details"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColor="@color/gray2"
                android:text="@string/date_creation" />



        <!-- Date d'échéance -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        >
        <TextView
            android:id="@+id/editTextDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editTextDueDate"
            android:layout_marginTop="30dp"
            android:textColor="@color/colortext"
            style="@style/details" />

        <ImageButton
            android:id="@+id/calendarEdit"
            android:layout_width="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:layout_marginStart="100dp"
            android:background="@color/blue"
            android:layout_height="45dp"
            android:src="@drawable/calendar"
            />
    </LinearLayout>

        <!-- Catégorie -->

        <TextView
            android:id="@+id/textViewcategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/details"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/gray2"
            android:text="@string/categorie" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:enabled="false" />

        <!-- Favoris -->
        <CheckBox
            android:id="@+id/checkBoxFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="Favoris"
            android:enabled="false" />

        <!-- Boutons -->

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enregistrer"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>

