<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <ImageView
        android:layout_width="95dp"
        android:layout_height="6dp"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        android:background="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/Create"
            android:padding="8dp"
            android:textColor="@color/blue"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="25dp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutTask"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/new_tasks" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_task"
            android:textColor="@color/blue"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutChallenge"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/new_categories"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_Category"
            android:textColor="@color/blue"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCategory"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/new_challenge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_Challenge"
            android:textColor="@color/blue"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>